# workinkorea-server

./: .gitignore  Dockerfile  Jenkinsfile  README.md  alembic.ini  dockerfile  entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: deploy-dev.yml  deploy-pro.yml
alembic/: env.py
alembic/versions/: 05cfcb09c1ff_feat_add_config.py  068c79805fce_feat_add_company_posts_table.py  1613fc0e2414_create_admin_notice_table.py  16f80eda3154_add_users_table_and_refresh_tokens_table.py  1de9b099cc80_feat_add_company_profile_table.py  26561a1fe2f0_feat_add_users_refresh_token_country_.py  31f887c48484_feat_add_base_table.py  43fb6d20bdd9_add_password_to_users_and_user_id_to_.py  4970d924d54a_fix_update_colume_for_profile_table.py  4caeeb791f47_fix_update_the_company_number_column_.py  4e76819351e2_feat_add_resume_table_with_relations.py  5abf636e665f_fix_add_url_colume_for_company_post_.py  74bb0a42d89e_fix_add_ondelete_cascade_to_fkeys.py  7c8da14e6ccd_feat_app_diagnosis_ansers_table_and_.py  a0ef5f301be7_add_user_gubun_column_to_users_table.py  a1b2c3d4e5f6_create_applications_table.py  a818146068be_feat_add_users_refresh_token_country_.py  aa2b3d734427_modified_table_name_table_relationship.py  b41ed4b86b5c_fix_update_company_table_add_company_.py  f5095d37f0eb_modified_positions_nullable.py  f6379ed575e3_create_admin_notice_table.py
app/: database.py  main.py
app/admin/: dependencies.py  router.py
app/applications/: router.py
app/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
(+107 files in other folders)
